--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
-
-    Hey <span class="word1"></span> did you ever <span class="word2"></span> untill you went
-    <span class="word3"></span>?            
-
+Amy
 
 
 
