--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 Amy
 <a href="https://amygao8.github.io"> Dupb </a>
-<img src="asset/images/sky.jpeg">
+<img src="asset/images/circle.jpg">
 
 
 
