--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
-Amy
-<a href="https://amygao8.github.io"> Dupb </a>
-<img src="asset/images/circle.jpg">
+Amy's Homepage
+<img src="assets/images/circle.jpg">
 
 
 
