--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Boilerplate Starter kit v1.08</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-  	<link rel="stylesheet" href="assets/css/Home.css" type="text/css">
+  	<link rel="stylesheet" href="assets/css/page1.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
   	<script src="assets/js/main.js"></script>
   </head>
@@ -13,13 +13,9 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
-  <div class="Tittle">
-    Amy's Home Page
-  </div> 
 
-  <div class="col">
-    Set 1: Poster 1
-  </div>      
+    Hey <span class="word1"></span> did you ever <span class="word2"></span> untill you went
+    <span class="word3"></span>?            
 
 
 
