--- a/index.html
+++ b/index.html
@@ -14,11 +14,89 @@
     <!-- start here -->
 
 
-    Hey <span class="word1"></span> did you ever <span class="word2"></span> untill you went
-    <span class="word3"></span>?            
+  <div class="tittle">
+    Amy's Home Page
+  </div>
 
+  <br>
+  <br>
+  <br>
+  <br>
 
+ 
+  <img src="assets/images/heart.jpg">
 
+  <div class="col">
+  <a href="amygao8.github.io/xyz-1/P1.html">
+    Set 1:Poster 1
+  </a>
+ </div>  
+
+  <div class="col">
+  <a href="amygao8.github.io/xyz-1/P2.html">
+    Set 1:Poster 2
+  </a>
+ </div> 
+
+  <div class="col">
+  <a href="amygao8.github.io/xyz-1/P3.html">
+    Set 1:Poster 3
+  </a>
+  </div> 
+
+   <div class="col">
+  <a href="amygao8.github.io/xyz-1/P4.html">
+    Set 1:Poster 4
+  </a>
+  </div>  
+
+   <div class="col">
+  <a href="amygao8.github.io/xyz-1/P5.html">
+    Set 1:Poster 4
+  </a>
+  </div>  
+
+   <div class="col">
+  <a href="amygao8.github.io/xyz-2/P1.html">
+    Set 2:Poster 1
+  </a>
+  </div> 
+
+  <div class="col">
+  <a href="amygao8.github.io/xyz-2/P2.html">
+    Set 2:Poster 2
+  </a>
+  </div> 
+
+  <div class="col">
+  <a href="amygao8.github.io/xyz-2/P3.html">
+    Set 2:Poster 3
+  </a>
+  </div> 
+
+   <div class="col">
+  <a href="amygao8.github.io/xyz-2/P4.html">
+    Set 2:Poster 4
+  </a>
+  </div>
+
+   <div class="col">
+  <a href="amygao8.github.io/xyz-2/P4.html">
+    Set 2:Poster 5
+  </a>
+  </div> 
+
+  <div class="name">
+    CDS3002 Digital Publishing
+  </div>  
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>                       
 
 
 
