--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
 
    <div class="col">
-  <a href="amygao8.github.io/xyz-2/P4.html">
+  <a href="amygao8.github.io/xyz-2/P5.html">
     Set 2:Poster 5
   </a>
   </div> 
@@ -90,13 +90,9 @@
     CDS3002 Digital Publishing
   </div>  
 
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>                       
+  <div class="mada">
+    MADA
+  </div>                     
 
 
 
