--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
  
   <img src="assets/images/heart.jpg">
 
+  <div class="rectangle"></div>
+
+  <div class="rect"></div>
+
   <div class="col">
   <a href="amygao8.github.io/xyz-1/P1.html">
     Set 1:Poster 1
