--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
  
   <img src="assets/images/heart.jpg">
 
-  <div class="rectangle"></div>
+<br>
+<br>
 
-  <div class="rect"></div>
+  <div class="info">
 
   <div class="col">
   <a href="amygao8.github.io/xyz-1/P1.html">
@@ -90,11 +91,19 @@
   </a>
   </div> 
 
+  </div>
+ <!-- info 1 ends -->
+
+ <br>
+ 
+<div class ="info">
   <div class="col">
-<a href="amygao8.github.io/moon/index.html">
+<a href="amygao8.github.io/Moon/index.html">
   Image Net
 </a>
   </div>
+</div>
+
 
   <div class="name">
     CDS3002 Digital Publishing
@@ -105,7 +114,9 @@
   </div>                     
 
 
+  <div class="rectangle"></div>
 
+  <div class="rect"></div>
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
   </body>
