--- a/Moon/index.html
+++ b/Moon/index.html
@@ -51,6 +51,7 @@
 
   <br>
   <br>
+  <br>
 
 
   <!-- container start-->
@@ -306,12 +307,21 @@
 
 </div>
 
+<!-- container end-->
+
+
 <br>
 <br>
 <br>
 
-  <!-- container end-->
-
+<!-- footer -->
+<div class="line"></div>
+<div class="footer">
+  CC BY-NC-SA 1.0 Amy Gao, images sourced from <br>
+  sculpturebythesea.com <br>
+  flickr.com <br>
+  metmuseum.org <br>
+</div>
 
 
 
