--- a/Moon/index.html
+++ b/Moon/index.html
@@ -46,12 +46,42 @@
     <img src="assets/images/logo.png">
   </div>
 
+<!-- landing page-->
+<div class="landing">
+
+<div class="column">
+<div class=heading>
+Image Net 
+<br>
+All About the Moon
+</div>
+</div>
+
+<div class="column">
+
+<div class="read">
+The Moon is a beautiful mystery, it has captivated the attention of everyone at some point. The Moon is an ancient symbol, it has shaped how we track and understand time, it rises every day bringing in the night,  it controls the tides and is believed to affect our energetic fields. It represents strong powerful feminine energy. The Moon signifies wisdom, illusion, intuition and spiritual connection. The Moon cycle connect with birth, death and reincarnation, like the cycle of a seed: it grows up into a flower, it blooms and then it dies. 
+
+<br>
+<br>
+
+We are all capable of attuning with the Moons energies and activating our inner power. The lunar cycle is  made up of different stages.
+
+<br>
+<br>
+Becoming knowledgeable about the Moons energies is the first step along this path and learning how these powerful energies can be harnessed within your life. We can use knowledge about the Moon’s cycle to reflect inwards at ourselves and our own needs. Each of the lunar states mirror a different aspects of a spiritual path which is ongoing with multiple repeats and ongoing learning.
+<br>
+<br>
+
+Each of the Moon Cycles looks different, it has it’s own unique shape and can easily be spotted. Each of these cycles carries with it it’s own spiritual meaning and this can be used to help us flow with the ever changing energies. The Moon takes approx 28 days to orbit the Earth and this is how we see a full cycle roughly every Month. 
+</div>
+</div>
+  
+</div>
+  <br>
+  <br>
+
   <!-- Big images start-->
-
-
-  <br>
-  <br>
-  <br>
 
 
   <!-- container start-->
