--- a/Moon/index.html
+++ b/Moon/index.html
@@ -79,7 +79,6 @@ Each of the Moon Cycles looks different, it has it’s own unique shape and can 
   
 </div>
   <br>
-  <br>
 
   <!-- Big images start-->
 
@@ -350,10 +349,12 @@ Each of the Moon Cycles looks different, it has it’s own unique shape and can 
 <!-- footer -->
 <div class="line"></div>
 <div class="footer">
-  CC BY-NC-SA 1.0 Amy Gao, images sourced from <br>
+  CC BY-NC-SA 4.0 Amy Gao, images sourced from <br>
   sculpturebythesea.com <br>
   flickr.com <br>
   metmuseum.org <br>
+  information sourced from <br> 
+  reclaimingzen.com/the-spiritual-moon-phases/<br>
 </div>
 
 
