--- a/misinformation/theranosintro.html
+++ b/misinformation/theranosintro.html
@@ -58,8 +58,9 @@
   <div class="text">THERANOS</div>
 </div>
 
-
-
+<div class="line">
+  <a href="amygao8.github.io/misinformation/theranos.html">Next</a>
+</div>
 
 
 
