--- a/misinformation/enronintro.html
+++ b/misinformation/enronintro.html
@@ -5,9 +5,9 @@
   	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Boilerplate Starter kit v1.08</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-  	<link rel="stylesheet" href="assets/css/theranos.css" type="text/css">
+  	<link rel="stylesheet" href="assets/css/enronintro.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
-  	<script src="assets/js/theranos.js"></script>
+  	<script src="assets/js/enronintro.js"></script>
   </head>
   <body>
     <!-- DO NOT REMOVE ABOVE -->
@@ -16,49 +16,51 @@
 
 <!-- Please typing your favorite word!-->
 <div id="ui">
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
+  <div class="text">ENRON</div>
 </div>
 
-
+<div class="line">
+  <a href="amygao8.github.io/misinformation/enron.html">Next</a>
+</div>
 
 
 
