--- a/misinformation/brex.html
+++ b/misinformation/brex.html
@@ -38,164 +38,119 @@ One effect of the Bre-X scandal was to strengthen securities regulation in Canad
     </div>
 
     <br>
-    <br>
+
+<div class="start">
+  The Scandal starts:
+</div>
 
 
 <div class="timeline">
   <div class="container left">
     <div class="content">
-      <h2></h2>
-      <p>Michael de Guzman,a Filipino geologist, was struggling to get recognition from his employer. So, he devised a plan to get rich.</p>
+      <div class="head">1989</div>
+      <p>David Walsh founded Bre-X Minerals Ltd. in 1989 as a subsidiary of Bresea Resources Ltd.</p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2></h2>
-      <p>He would convince the world that he had found gold in Borneo. But first he needed someone with credibility to corroborate his story.</p>
+      <div class="head">1993</div>
+      <p>Walsh followed the advice of geologist John Felderhof and bought a property in the middle of a jungle near the Busang River in Borneo, Indonesia.</p>
     </div>
   </div>
   <div class="container left">
     <div class="content">
-      <h2></h2>
-      <p>Enter geologist John Felderhof, who immediately got excited about the news. De Guzman convinced Felderhof that they needed an investor.</p>
+       <div class="head">1994</div>
+      <p>Initial drill results were encouraging, and the drill program was ramped up.</p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2></h2>
-      <p>De Guzman pushed for an investor who had a hunger for risk and wasn't going to be asking questions.</p>
+       <div class="head">1994</div>
+      <p>However, it was the project manager, Michael de Guzman, who was filing gold from his wedding ring and mixing the flakes in with the crushed core samples.</p>
     </div>
   </div>
   <div class="container left">
     <div class="content">
-      <h2></h2>
-      <p>Felderhof recommended a Canadian businessman named David Walsh.</p>
+      <div class="head">1994</div>
+      <p>De Guzman used realistic ratios of gold to rock to not set off alarm bells, and to keep project going forward.</p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2></h2>
-      <p>De Guzman and Felderhoff wined and dined Walsh in Indonesia, and immediately got him to commit $80k to the project.</p>
+       <div class="head">1994</div>
+      <p>Over the next 2.5 years, de Guzman would buy $61k of panned gold from locals to use in salting.</p>
     </div>
   </div>
 
  <div class="container left">
     <div class="content">
-      <h2></h2>
-      <p>After the core samples were crushed and collected, de Guzman made sure he had some privacy with them before they were shipped off to be analysed.</p>
+     <div class="head">1995</div>
+      <p>Independent auditors that were sent in by large institutional investors found that the panned gold had rounded edges, but de Guzman explained it was because of “volcanic pool” theory.</p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2></h2>
-      <p>De Guzman used a ratio of around 3oz of gold per ton of rock, which was small enough to not attract too much attention. The labs were convinced and gave Bre-X the thumbs up.</p>
+       <div class="head">1995</div>
+      <p>De Guzman, Felderhoff and Walsh sell off a small portion of their options for $100 million.</p>
     </div>
   </div>
 
  <div class="container left">
     <div class="content">
-      <h2></h2>
-      <p>Shares of Bre-X, a penny stock, exploded on the Alberta Stock Exchange.</p>
+       <div class="head">1996</div>
+      <p>Bre-X hits a snag with the Indonesian government, who claimed that Bre-X was not playing by the “rules” of the country. Bre-X’s exploration permits are revoked.</p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2></h2>
-      <p>However, de Guzman could file down his wedding ring for only so long.</p>
+        <div class="head">1997</div>
+      <p>January fire at Busang destroys many of the sample records.</p>
     </div>
   </div>
 
  <div class="container left">
     <div class="content">
-      <h2></h2>
-      <p>So, he started paying locals for their gold, which they got through panning. De Guzman would buy $61k worth of this panned gold over the next two and a half years.</p>
+        <div class="head">1997</div>
+      <p>After many major miners express interest in Bre-X, eventually a joint venture is reached that gives Indonesia 40% share, Bre-X 45%, and Freeport McMoRan a 15% share of interests.</p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
-      <h2></h2>
-      <p>The auditor bought it, and the stock soared.</p>
+       <div class="head">1997</div>
+      <p>Freeport begins due diligence on deposit and starts to twin holes that were already drilled.</p>
     </div>
   </div>
 
  <div class="container left">
     <div class="content">
-      <h2></h2>
-      <p>De Guzman, Felderhoff and Walsh sold off a small portion of their options for around $100 million.</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2></h2>
-      <p>However, all of this wealth creation caught the attention of Indonesian President Suharto, who wanted to get in on the action.</p>
+       <div class="head">1997</div>
+      <p>Freeport reports “minor amounts of gold” in some holes, but not much else.</p>
     </div>
   </div>
 
- <div class="container left">
-    <div class="content">
-      <h2></h2>
-      <p>Right away, the Indonesian government revoked Bre-X's exploration permits.</p>
-    </div>
-  </div>
   <div class="container right">
     <div class="content">
-      <h2></h2>
-      <p>The Indonesian government's intervention was the beginning of the end of the Bre-X fraud.</p>
+       <div class="head">1997</div>
+      <p>On his way to meet the Freeport due diligence team, de Guzman mysteriously falls to his death 600 ft from a helicopter. Police rule it a suicide.</p>
     </div>
-  </div>
+    </div>
 
  <div class="container left">
     <div class="content">
-      <h2></h2>
-      <p>With the government hot on is tail, de Guzman allegedly set fire to his office, destroying all of his records.</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2></h2>
-      <p>The Indonesian government eventually left Bre-X with only 45% control of the mine, and the rest was left to be run by Freeport McMoran. Bre-X's market cap plunged by a billion dollars.</p>
+      <div class="head">1997</div>
+      <p>Shares of Bre-X crash.</p>
     </div>
   </div>
 
- <div class="container left">
+ <div class="container right">
     <div class="content">
-      <h2></h2>
-      <p>To offset this, de Guzman ramped up the amount of gold flake showing up in the core samples, and the stock soared again. The shareholders were pleased.</p>
+       <div class="head">1997</div>
+      <p>Report confirms that there is no gold at Busang, and samples were tampered with.</p>
     </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2></h2>
-      <p>But after much drilling, the miners from Freeport McMoran couldn't find a flake of gold. They were suspicious and they demanded that de Guzman explain.</p>
-    </div>
-  </div>
+ </div>
 
- <div class="container left">
-    <div class="content">
-      <h2></h2>
-      <p>De Guzman boarded a helicopter that would fly him to the site. The only other person in the helicopter was the pilot.</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2></h2>
-      <p>According to reports, the pilot turned around at one point and de Guzman was gone. Everyone concluded that he jumped.</p>
-    </div>
-  </div>
-
- <div class="container left">
-    <div class="content">
-      <h2></h2>
-      <p>Days later, the Indonesian Army found de Guzman's body, which they said was badly decomposed and mostly eaten by animals. The family was not allowed to see the body.</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2></h2>
-      <p>With no answers and no gold, the stock went to zero.</p>
-    </div>
-  </div>
 </div>
+
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
   </body>
