--- a/misinformation/brexintro.html
+++ b/misinformation/brexintro.html
@@ -16,46 +16,46 @@
 
 <!-- Please typing your favorite word!-->
 <div id="ui">
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
-  <div class="text">BREX</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
+  <div class="text">BRE-X</div>
 </div>
 
 <div class="line">
