--- a/misinformation/theranos.html
+++ b/misinformation/theranos.html
@@ -14,55 +14,170 @@
     <!-- start here -->
 
 
-<!-- Please typing your favorite word!-->
-<div id="ui">
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
-  <div class="text">THERANOS</div>
+<div class="tittle">
+  ENRON
+</div>
+
+<br>
+<br>
+
+    <div class="info">
+Theranos' star was shining bright going into 2015.
+<br>
+<br>
+
+The blood-testing startup had racked up a $9 billion valuation with its big vision to test for a number of conditions using a small sample of blood, and its CEO Elizabeth Holmes was featured on the covers of business magazines and lists of top executives. But then questions started being raised about how the company's technology worked. 
+
+<br>
+<br>
+
+As Wall Street Journal reporter John Carreyrou details in his book, "Bad Blood: Secrets and Lies in a Silicon Valley Startup," the events leading up to the downfall of the company started unfolding years earlier. The book gives a behind the scenes look into the events that propelled Theranos into chaos.
+    </div>
+
+    <br>
+
+<div class="start">
+  The Scandal starts:
 </div>
 
 
+<div class="timeline">
+  <div class="container left">
+    <div class="content">
+      <div class="head">2003</div>
+      <p>Nineteen-year-old Stanford chemical and electrical engineering drop-out Elizabeth Holmes founded Theranos with the aim of revolutionizing blood testing. Using a "nanotainer" (a small device designed to draw, retain, and analyze a droplet of blood from a patient’s fingertip) and its proprietary "Edison" testing technology, Theranos claimed the device could run a multitude of tests on a patient’s physiology within minutes and at a fraction of the cost of current technology.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <div class="head">2004</div>
+      <p>Theranos raised $6.9 million in early funding gaining a $30 million valuation.</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+       <div class="head">2007</div>
+      <p>The company's valuation hit $197 million after it raised another $43.2 million in early-round funding.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+       <div class="head">2010</div>
+      <p>After further rounds of funding, Theranos was valued at $1 billion.</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <div class="head">2013</div>
+      <p>After a decade working "in the dark," Holmes introduced Theranos to the world via press appearances and unveiled a website.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+       <div class="head">2014</div>
+      <p>With over $400 million in funding, Theranos was valued at nearly $9 billion. Holmes effectively became a multi-billionaire thanks to her 50% stake.</p>
+    </div>
+  </div>
 
+ <div class="container left">
+    <div class="content">
+     <div class="head">12.2014</div>
+      <p>Despite her company's hefty valuation, Holmes remained tight-lipped on how exactly Theranos’s technology worked. It turned out that the technology had never been submitted for peer review in medical journals. A New Yorker profile termed her explanations "comically vague," citing as one example Holmes's statement that "a chemistry is performed so that a chemical reaction occurs and generates a signal from the chemical interaction with the sample, which is translated into a result, which is then reviewed by certified laboratory personnel."</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+       <div class="head">08.07.2015</div>
+      <p>Capital BlueCross, a Pennsylvania insurer with 725,000 customers, chose Theranos as its preferred lab work provider. Theranos was valued at $10 billion.</p>
+    </div>
+  </div>
 
+ <div class="container left">
+    <div class="content">
+       <div class="head">15.10.2015</div>
+      <p>The Wall Street Journal ran a scathing article criticizing Theranos. Based on interviews with ex-employees, the newspaper alleged rampant management incompetence and claimed that Theranos had grossly exaggerated the capabilities of its proprietary technology. One former senior employee stated that only a small fraction of all the tests were conducted on the "Edison machines," and the majority of tests were handled on competitors’ equipment despite Theranos’s claims to the contrary. If true, this would have been a violation of the U.S. Food and Drug Administration (FDA) rules.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+        <div class="head">15.10.2015</div>
+      <p>Holmes appeared on "Mad Money" and other media outlets to do damage control. She was “shocked” by the Wall Street Journal article and claimed that Theranos supplied over 1,000 pages of documentation to refute the allegations. The Wall Street Journal stood by its reporting.</p>
+    </div>
+  </div>
 
+ <div class="container left">
+    <div class="content">
+        <div class="head">16.10.2015</div>
+      <p>A follow-up article in the Wall Street Journal stated that Theranos was forced to suspend the use of its unapproved nanotainer for all but one type of blood test.  </p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+       <div class="head">27.10.2015</div>
+      <p>The FDA released two partially-redacted Form 483 reports from an ongoing investigation into Theranos. The reports were less than favorable and claimed that Theranos had "uncleared medical device(s)," poor records, was mishandling complaints, and had failed to conduct audits and produce supplier qualifications. In regard to an unspecified medical device, an investigator noted "the design was not validated under actual or simulated use conditions." Further, Theranos failed to “ensure the device conforms to defined user needs and intended uses.”</p>
+    </div>
+  </div>
 
+ <div class="container left">
+    <div class="content">
+       <div class="head">28.10.2015</div>
+      <p>Fortune reported that Theranos had sought to raise an additional $200 million in Series C-3 funding just days before the initial Wall Street Journal article was published.</p>
+    </div>
+  </div>
+
+  <div class="container right">
+    <div class="content">
+       <div class="head">10.11.2015</div>
+      <p>A $350 million deal with Safeway fizzled out after Theranos failed to meet key deadlines for rollouts and Safeway executives questioned the validity of the test results.</p>
+    </div>
+    </div>
+
+ <div class="container left">
+    <div class="content">
+      <div class="head">27.12.2015</div>
+      <p>The Wall Street Journal ran another article alleging management ineptitude at Theranos and test rigging to produce better results for its Edison machines.</p>
+    </div>
+  </div>
+
+  <div class="container right">
+    <div class="content">
+       <div class="head">27.01.2016</div>
+      <p>A letter (dated January 25) released by the Centers for Medicare & Medicaid Services (CMS) stated that a California-based lab used by Theranos posed "immediate jeopardy to patient health and safety." CMS gave the company 10 days to correct the deficiencies or face daily fines and/or loss of CMS approval for Medicare payments.</p>
+    </div>
+    </div>
+
+ <div class="container left">
+    <div class="content">
+      <div class="head">28.01.2016</div>
+      <p>Following the CMS report, Walgreens Boots Alliance Inc. (WBA) decided to temporarily close the Theranos Wellness Center in its Palo Alto store and suspend its use of Theranos's Newark, Calif. lab.</p>
+    </div>
+  </div>
+
+  <div class="container right">
+    <div class="content">
+       <div class="head">01.05.2017</div>
+      <p>Theranos settled a lawsuit with Partner Fund Management, one of its largest investors, after the hedge fund accused the company of securities fraud. Theranos had previously settled proceedings with the Centers for Medicare & Medicaid Services and the Arizona Attorney General.</p>
+    </div>
+    </div>
+
+ <div class="container left">
+    <div class="content">
+      <div class="head">14.03.2018</div>
+      <p>The SEC charges Theranos, its founder and CEO Elizabeth Holmes, and its former President Ramesh "Sunny" Balwani with massive fraud. The complaint alleged that the company raised more than $700 million by deceiving investors for years about the company's performance. Both Theranos and Holmes agreed to settle the fraud charges pending court approval. Holmes lost control of the company, returned millions of shares, and was barred from serving as an officer or director of a public company for 10 years.</p>
+    </div>
+  </div>
+
+  <div class="container right">
+    <div class="content">
+       <div class="head">15.06.2018</div>
+      <p>A federal grand jury indicted both Holmes and Balwani on nine counts of wire fraud and two counts of conspiracy to commit wire fraud. The press release from the U.S. Attorney's Office stated that in order to promote Theranos, both Holmes and Balwani "engaged in a multi-million dollar scheme to defraud investors and a separate scheme to defraud doctors and patients." 
+
+        <br>
+      Holmes had stepped down as Theranos CEO earlier in the day although she continues to be the chair of the company's board.</p>
+    </div>
+    </div>
+
+</div>
 
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
