--- a/misinformation/enron.html
+++ b/misinformation/enron.html
@@ -13,7 +13,134 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
+<div class="tittle">
+  ENRON
+</div>
 
+<br>
+<br>
+
+    <div class="info">
+Enron was an American energy company that was looking to change the face of energy management in the United States, creating markets around the sale of electricity and natural gas. As a market leader, the company’s stock price shot through the roof.
+But some of the numbers supporting those prices were cooked—Chairman Ken Lay and CEO Jeff Skilling shuffled financing structures and debt around to artificially inflate the company’s revenues.
+<br>
+<br>
+
+Analysts grew suspicious and the executives became defensive. Skilling sold off $33 million in shares and then resigned as the stock price faltered under continuing examination. By the end of 2001, the company was bankrupt, and those executives and others were on trial. Twenty-one people were found guilty and sentenced for the coverup.
+The scandal also resulted in a major sub-scandal, when respected accounting consultancy Arthur Andersen was convicted of shredding evidence for their client during the course of the investigation. Although the conviction was reversed on appeal, the company’s position as an unbiased auditor was so called into question that it surrendered its accounting licenses and effectively ceased independent operation.
+
+<br>
+<br>
+
+The Enron scandal reshaped the corporate accounting environment in the United States by leading to the Sarbanes-Oxley Act of 2002. Much more stringent requirements for reporting and responsibility of public companies and accounting firms, including criminal penalties for boards of directors, have substantially altered the business landscape.
+    </div>
+
+    <br>
+
+<div class="start">
+  The Scandal starts:
+</div>
+
+
+<div class="timeline">
+  <div class="container left">
+    <div class="content">
+      <div class="head">1985</div>
+      <p>Enron is formed following a merger between Houston Natural Gas Co. and InterNorth Inc.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <div class="head">1995</div>
+      <p>Enron is named "America's Most Innovative Company" by Fortune. The firm goes on to win this award for six consecutive years.</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+       <div class="head">1998</div>
+      <p>Andrew Fastow is promoted to CFO, he ultimately spearheads the creation of a network of companies that hide Enron's losses.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+       <div class="head">2000</div>
+      <p>Enron's shares skyrocket to an all-time high of $90.56.</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <div class="head">12.02.2001</div>
+      <p>Jeffrey Skilling replaces Kenneth Lay as CEO. However, Lay remains a member of the board of directors.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+       <div class="head">14.08.2001</div>
+      <p>Skilling resigns suddenly, and Lay takes over once again. Enron's broadband division also reports a massive $137 million loss. Analysts became weary of the company and subsequently drop their ratings for Enron's stock. In turn, the company's share price dives to $39.95, a 52-week low.</p>
+    </div>
+  </div>
+
+ <div class="container left">
+    <div class="content">
+     <div class="head">12.10.2001</div>
+      <p>Arthur Andersen legal counsel tells auditors to destroy all Enron files, except Enron's most basic documents.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+       <div class="head">16.10.2001</div>
+      <p>Enron reports a $618 million loss and $1.2 billion value write off. Enron's stock drops further to $38.84.</p>
+    </div>
+  </div>
+
+ <div class="container left">
+    <div class="content">
+       <div class="head">22.10.2001</div>
+      <p>Enron announces it's facing a SEC probe. Shares fall to around $20.75 that day, following the announcement.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+        <div class="head">08.11.2001</div>
+      <p>Enron admits it has been inflating its income by around $586 million since 1997.</p>
+    </div>
+  </div>
+
+ <div class="container left">
+    <div class="content">
+        <div class="head">29.11.2001</div>
+      <p>Arthur Andersen becomes another casualty of the Enron scandal as the SEC expands its investigation.</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+       <div class="head">02.12.2001</div>
+      <p>Enron files for Chapter 11 bankruptcy. Its stock closes at $0.26.</p>
+    </div>
+  </div>
+
+ <div class="container left">
+    <div class="content">
+       <div class="head">09.01.2002</div>
+      <p>The Justice Department launches a criminal investigation.</p>
+    </div>
+  </div>
+
+  <div class="container right">
+    <div class="content">
+       <div class="head">15.01.2002</div>
+      <p>Enron is suspended from the NYSE.</p>
+    </div>
+    </div>
+
+ <div class="container left">
+    <div class="content">
+      <div class="head">15.06.2002</div>
+      <p>Enron's accounting firm, Arthur Andersen is convicted of obstructing justice.</p>
+    </div>
+  </div>
+
+</div>
 
 
 
