--- a/misinformation/brex.html
+++ b/misinformation/brex.html
@@ -14,7 +14,7 @@
     <!-- start here -->
 
 <div class="tittle">
-  BRE-X
+  <img src="assets/images/brex.png">
 </div>
 
 <br>
@@ -38,6 +38,9 @@ One effect of the Bre-X scandal was to strengthen securities regulation in Canad
     </div>
 
     <br>
+<div class="graph">
+  <img src="assets/images/graph.png">
+</div>
 
 <div class="start">
   The Scandal starts:
