--- a/misinformation/enron.html
+++ b/misinformation/enron.html
@@ -14,7 +14,7 @@
     <!-- start here -->
 
 <div class="tittle">
-  ENRON
+  <img src="assets/images/enron.png">
 </div>
 
 <br>
@@ -36,6 +36,10 @@ The Enron scandal reshaped the corporate accounting environment in the United St
     </div>
 
     <br>
+
+<div class="graph">
+  <img src="assets/images/graph1.png">
+</div>
 
 <div class="start">
   The Scandal starts:
