--- a/misinformation/brexintro.html
+++ b/misinformation/brexintro.html
@@ -59,7 +59,7 @@
 </div>
 
 <div class="line">
-  <a href="amygao8.github.io/misinformation/brex.html">Next</a>
+  <a href="https://amygao8.github.io/misinformation/brex">Next</a>
 </div>
 
 
