--- a/misinformation/theranos.html
+++ b/misinformation/theranos.html
@@ -179,6 +179,11 @@ As Wall Street Journal reporter John Carreyrou details in his book, "Bad Blood: 
 
 </div>
 
+<div class="graph">
+  <img src="assets/images/graph2.png">
+</div>
+
+
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
   </body>
