--- a/misinformation/index.html
+++ b/misinformation/index.html
@@ -5,9 +5,9 @@
   	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Boilerplate Starter kit v1.08</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-  	<link rel="stylesheet" href="assets/css/home.css" type="text/css">
+  	<link rel="stylesheet" href="assets/css/index.css" type="text/css">
   	<script src="assets/js/jquery-3.4.1.min.js"></script>
-  	<script src="assets/js/home.js"></script>
+  	<script src="assets/js/index.js"></script>
   </head>
   <body>
     <!-- DO NOT REMOVE ABOVE -->
