--- a/misinformation/index.html
+++ b/misinformation/index.html
@@ -13,9 +13,64 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
+<!-- Please typing your favorite word!-->
 
+<div class="top">
+<div id="ui">
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
+</div>
+</div>
 
-
+<div class="container">
+  <div class="link">
+    <img src="assets/images/brex.png">
+  </div>
+  <div class="link">
+    <img src="assets/images/enron.png">
+  </div>
+  <div class="link">
+    <img src="assets/images/theranos.png">
+  </div>
+</div>
 
 
 
