--- a/notabook/index.html
+++ b/notabook/index.html
@@ -13,6 +13,87 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
+    <div class="nav">
+      <div class="button">
+        Previous Article
+      </div>
+
+       <div class="button">
+        Underground Ocean
+      </div>
+
+       <div class="button">
+        Next Article
+      </div>
+
+    </div>
+
+<br>
+<br>
+<br>
+<br>
+
+<div class="page">
+  <div class="main">
+    <div class="head w1of2">
+    <h1>
+      Earth may have underground 'ocean' three times that on surface
+    </h1>
+    <h2>
+      Scientists say rock layer hundreds of miles down holds vast amount of water, opening up new theories on how planet formed
+    </h2>
+    </div>
+
+    <div class="bo w1of2">
+    <p>
+      After decades of searching scientists have discovered that a vast reservoir of water, enough to fill the Earth’s oceans three times over, may be trapped hundreds of miles beneath the surface, potentially transforming our understanding of how the planet was formed.
+      <br>
+      The water is locked up in a mineral called ringwoodite about 660km (400 miles) beneath the crust of the Earth, researchers say. Geophysicist Steve Jacobsen from Northwestern University in the US co-authored the study published in the journal Science and said the discovery suggested Earth’s water may have come from within, driven to the surface by geological activity, rather than being deposited by icy comets hitting the forming planet as held by the prevailing theories.
+      <br>
+
+      “Geological processes on the Earth’s surface, such as earthquakes or erupting volcanoes, are an expression of what is going on inside the Earth, out of our sight,” Jacobsen said.
+      <br>
+
+      “I think we are finally seeing evidence for a whole-Earth water cycle, which may help explain the vast amount of liquid water on the surface of our habitable planet. Scientists have been looking for this missing deep water for decades.”
+      <br>
+
+    </p>
+  </div>
+
+
+  <div class="pic1">
+    <img src="assets/images/1.svg">
+  </div>
+
+    <p>
+
+      <br>
+      <br>
+      Jacobsen and his colleagues are the first to provide direct evidence that there may be water in an area of the Earth’s mantle known as the transition zone. They based their findings on a study of a vast underground region extending across most of the interior of the US.
+      Ringwoodite acts like a sponge due to a crystal structure that makes it attract hydrogen and trap water.
+      <br>
+      <br>
+
+      If just 1% of the weight of mantle rock located in the transition zone was water it would be equivalent to nearly three times the amount of water in our oceans, Jacobsen said.
+      <br>
+      <br>
+
+      The study used data from the USArray, a network of seismometers across the US that measure the vibrations of earthquakes, combined with Jacobsen’s lab experiments on rocks simulating the high pressures found more than 600km underground.
+      <br>
+      <br>
+
+      It produced evidence that melting and movement of rock in the transition zone – hundreds of kilometres down, between the upper and lower mantles – led to a process where water could become fused and trapped in the rock.
+      <br>
+      <br>
+
+      The discovery is remarkable because most melting in the mantle was previously thought to occur at a much shallower distance, about 80km below the Earth’s surface.
+      <br>
+      <br>
+
+      Jacobsen told the New Scientist that the hidden water might also act as a buffer for the oceans on the surface, explaining why they have stayed the same size for millions of years. "If [the stored water] wasn't there, it would be on the surface of the Earth, and mountaintops would be the only land poking out," he said.
+    </p>
+  </div>
+</div>
 
 
 
